--- a/student/templates/student/home.html
+++ b/student/templates/student/home.html
@@ -18,7 +18,7 @@
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'add_student' %}">New Register</a>
                 <a href="{% url 'detail' %}">All Registed Student</a>
-                <a href="#">Search</a>
+                <a href="{% url 'search' %}">Search</a>
                 <a href="#">Drop Out</a>
             </div>
             <div style="float:right;" class="nav-title">
